# eda-agents

./: .gitignore  .gitmodules  .mcp.json.example  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  opencode.json  opencode.json.example  pyproject.toml
.claude/: mcp.json.example
.github/workflows/: bench.yml  (+1 more)
docker/: README.md  xspice.Dockerfile  xspice_entrypoint.sh
docs/: architecture.md  digital_flow_field_notes.md  idea_to_chip_s11.md  iic_osic_tools_audit.md  librelane_templates.md  license_status.md  mcp_public_install.md  mcp_spike_design.md  opencode_agents.md  phase0_overnight_decisions.md  release_luts.md
evals/: sar_adc_arch.json
examples/: 01_miller_ota_sweep.py  02_gf180_ota_sweep.py  03_single_agent_design.py  04_multi_agent_exploration.py  05_validate_adk_flow.py  06_trackd_gf180_flow.py  07_autoresearch_circuit.py  08_postlayout_validation.py  09_rtl2gds_digital.py  09_rtl2gds_gf180.py  10_digital_autoresearch.py  10_digital_autoresearch_gf180.py  11_ams_mixed_domain_demo.py  12_analog_roles_demo.py  13_sar_adc_11bit.py  13b_sar_adc_8bit_behavioral.py  14_bridge_e2e.py  15_mcp_smoke.py  rtl_counter3.v
fixtures/: fake_flow_metrics.json  sample_librelane_config.yaml
scripts/: characterize_sar11_ceiling.py  check_librelane_template_upstream.py  check_tools.sh  compare_s10c_bench.py  compare_s10g_llm_sizing.py  compare_s10h_fazyrv.py  evaluate_postlayout.py  fetch_digital_designs.sh  generate_gf180_luts.py  generate_gmid_lut.py  generate_opencode_agent.py  glayout_driver.py  idea_to_chip_wizard.py  install_eda_agents.sh  run_bench.py  run_s10c_ab_bench.sh  run_s10g_llm_sizing_ab.sh  run_s10h_fazyrv_ab.sh  validate_digital_flow.py  validate_gf180_ota.py  validate_librelane_setup.py  validate_pip_install.sh  xspice_docker.sh
tests/: conftest.py  test_adc_metrics.py  test_analog_composition_loop.py  test_analog_roles.py  test_autoresearch_core.py  test_autoresearch_runner.py  test_bench_adapter_inputs.py  test_bench_runner.py  test_bench_schemas.py  test_bootstrap.py  test_bridge_cli.py  test_bridge_jobs.py  test_bridge_klayout_ops.py  test_bridge_models.py  test_bridge_ssh.py  test_bridge_xschem.py  test_claude_code_harness.py  test_cocotb_skill.py  test_describe_topology.py  test_digital_adk_agents.py  test_digital_autoresearch.py  test_digital_autoresearch_live.py  test_digital_cc_runner.py  test_digital_design.py  test_digital_e2e.py  test_flow_docker_skills.py  test_flow_metrics.py  test_from_spec.py  test_generic_design.py  test_gf180_ota.py  test_glayout_runner.py  test_gmid_json_adapter.py  test_gmid_sizing.py  test_handler.py  test_idea_to_chip_wizard.py  test_idea_to_rtl.py  test_idea_to_rtl_loop.py  test_iteration_log.py  test_klayout_drc.py  test_klayout_lvs.py  (+34 more)
(+486 files in other folders)
